--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
     <title>Greetings</title>
 
     <style>
-        /* Global Styles */
         body {
-            font-family: 'Times New Roman', Times, serif;
-            justify-content: center;
-            align-items: center;
-            background-color: #ffffff; /* White background */
-            color: #2a5298; /* Default text color */
+            font-variant-caps: all-petite-caps;
         }
 
-        /* Widget Container */
         .widget {
-            padding: 10px; /* Reduced padding for less height */
+            padding: 5px 5px;
             color: #000000;
             display: flex;
             justify-content: center;
@@ -28,109 +22,64 @@
             border: 3px solid #000000;
             border-radius: 5px;
             box-shadow: 2px 2px 1px 0px #000000;
-            position: relative; /* Add relative positioning for absolute elements */
         }
 
-        /* Greeting Section */
         .greet {
-            font-size: 2.5em; /* Reduced font size for less height */
-            font-weight: bold;
-            margin-bottom: 5px; /* Adjusted margin for spacing */
-            color: #0056b3; /* Blue color for greeting */
-            animation: fadeIn 2s ease-in-out;
+            font-size: 3.5em;
+            color: #044baf;
         }
 
-        /* Date and Time */
-        .date, .clock {
-            font-family: 'Courier New', monospace;
-            font-size: 1.5em; /* Reduced font size */
-            margin: 5px 0; /* Adjusted margin */
-            color: #2a5298; /* Dark blue color */
+        .date {
+            font-family: monospace;
+            font-size: 2em;
         }
 
-        /* Time */
+        .clock {
+            font-family: monospace;
+            font-size: 2em;
+        }
+
         .time {
             display: inline-block;
-            min-width: 30px;
+            min-width: 20px;
         }
 
         .colon {
-            font-size: 1.2em;
-            margin: 0 3px;
+            font-size: 1em;
             display: inline-block;
-            color: #0056b3; /* Blue color for colon */
         }
 
-        /* Scrolling Text */
-        .scrolling-text {
-            margin-top: 10px; /* Reduced margin */
-            font-size: 1.3em; /* Reduced font size */
+        /* Marquee styling */
+        .marquee {
+            margin-top: 10px;
+            font-size: 1.8em;
+            color: #063679;
             font-weight: bold;
-            color: #0056b3; /* Blue color for scrolling text */
-            overflow: hidden;
-            white-space: nowrap; /* Prevent text from wrapping */
-            position: absolute; /* Position it absolutely within the widget */
-            bottom: 10px; /* Align to the bottom of the widget */
-            left: 0; /* Start at the left edge */
-            right: 0; /* Extend to the right edge */
-        }
-
-        .scrolling-text span {
-            display: inline-block;
-            animation: scrollLeft 10s linear infinite;
-        }
-
-        /* Animations */
-        @keyframes scrollLeft {
-            from {
-                transform: translateX(100%); /* Start off-screen to the right */
-            }
-            to {
-                transform: translateX(-100%); /* End off-screen to the left */
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
-        /* Hover Interaction */
-        .widget:hover {
-            /* Remove the zoom effect */
-            /* transform: scale(1.05); */
-            transition: box-shadow 0.3s ease-in-out; /* Only transition the box-shadow */
         }
     </style>
 </head>
 <body>
 
-<div class="widget">
-    <div class="greet" id="greet"></div>
-    <div class="date" id="date"></div>
-    <div class="clock">
-        <div class="time" id="hour"></div>
-        <div class="colon">:</div>
-        <div class="time" id="min"></div>
-        <div class="colon">:</div>
-        <div class="time" id="sec"></div>
-    </div>
-    <br>
-
-    <!-- Smooth scrolling message -->
-    <div class="scrolling-text">
-        <span>Welcome to Gunma Gohkin Philippines Corporation website! </span>
+<div class="container">
+    <div class="widget">
+        <div class="greet" id="greet"></div>
+        <div class="date" id="date"></div>
+        <div class="clock">
+            <div class="time" id="hour"></div>
+            <div class="colon">:</div>
+            <div class="time" id="min"></div>
+            <div class="colon">:</div>
+            <div class="time" id="sec"></div>
+        </div>
+        <!-- Marquee for the welcome message -->
+        <marquee class="marquee">Welcome to Gunma Gohkin Philippines Corporation website!</marquee>
     </div>
 </div>
 
 <script>
-    function displayGreetings(today) {
-        const hrs = today.getHours();
-        let name = ""; // Optional: Add a name here.
+    function dispalyGreetings(today) {
+        hrs = today.getHours();
+        let name = ""; // If you want to add a name, set it here.
         let greet = "";
         if (hrs < 12)
             greet = 'Good Morning ' + name;
@@ -141,23 +90,27 @@
         document.getElementById('greet').innerHTML = greet;
     }
 
-    function displayDate(today) {  
+    function dispalyDate(today) {  
         const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
         const monthNames = ["January", "February", "March", "April", "May", "June",
                             "July", "August", "September", "October", "November", "December"];
-        const dayName = days[today.getDay()];
-        const monthName = monthNames[today.getMonth()];
-        const date = today.getDate();
-        const year = today.getFullYear();
+        var dayName = days[today.getDay()];
+        var monthName = monthNames[today.getMonth()];
+        var date = today.getDate();
+        var year = today.getFullYear();
         document.getElementById('date').innerHTML = dayName + ", " + monthName + " " + date + " " + year;
     }
 
-    function displayClock(today) {
-        const hour = padZeros(twelveHour(today.getHours()));
-        const minutes = padZeros(today.getMinutes());
-        let seconds = padZeros(today.getSeconds());
+    function dispalyClock(today) {
+        var hour = padZeros(twelveHour(today.getHours()));
+        var minutes = padZeros(today.getMinutes());
+        var seconds = padZeros(today.getSeconds());
 
-        seconds += today.getHours() >= 12 ? " pm" : " am";
+        if (today.getHours() >= 12) {
+            seconds += " pm";
+        } else {
+            seconds += " am";
+        }
 
         document.getElementById('hour').innerHTML = hour;
         document.getElementById('min').innerHTML = minutes;
@@ -175,18 +128,21 @@
     }
 
     function padZeros(num) {
-        return num < 10 ? '0' + num : num;
+        if (num < 10) {
+            num = '0' + num;
+        }
+        return num;
     }
 
-    function displayWidget() {
-        const today = new Date();
-        displayGreetings(today);
-        displayDate(today);
-        displayClock(today);
-        setTimeout(displayWidget, 1000);
+    function dispalyWidget() {
+        var today = new Date();
+        dispalyGreetings(today);
+        dispalyDate(today);
+        dispalyClock(today);
+        setTimeout(dispalyWidget, 500);
     }
 
-    displayWidget();
+    dispalyWidget();
 </script>
 
 </body>
