--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             "8-28": "Happy National Heroes Day!👨🏻‍🎓", // Example for August
             "10-31": "Happy Halloween!🎃",
             "11-1": "Happy All Saints' Day!😇",
-            "10-19": "Happy All Souls' Day!🕯️",
+            "11-2s": "Happy All Souls' Day!🕯️",
             "11-30": "Bonifacio Day!🤵🏻‍♂️",
             "12-24": "Christmas Eve! 🎅🏻",
             "12-25": "Merry Christmas!🎄",
