--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         .date {
             font-family: monospace;
             font-size: 2em;
+            font-weight: bold;
         }
 
         .clock {
             font-family: monospace;
             font-size: 2em;
+            font-weight: bold;
         }
 
         .time {
@@ -54,30 +56,36 @@
             font-size: 1.8em;
             color: #063679;
             font-weight: bold;
+           
         }
 
+ /* Seasonal Backgrounds */
         .winter {
-            background-color: #e0f7fa;
+            background: linear-gradient(rgba(224, 247, 250, 0.7), rgba(224, 247, 250, 0.7)), 
+                        url('winter.jpg') no-repeat center center;
             background-size: cover;
-            color: #1c6e8c;
+            color: #034f6b;
         }
 
         .spring {
-            background-color: #e8f5e9;
+            background: linear-gradient(rgba(232, 245, 233, 0.7), rgba(232, 245, 233, 0.7)), 
+                        url('spring.webp') no-repeat center center;
             background-size: cover;
-            color: #388e3c;
+            color: #107715;
         }
 
         .summer {
-            background-color: #fffde7;
+            background: linear-gradient(rgba(255, 253, 231, 0.7), rgba(255, 253, 231, 0.7)), 
+                        url('summer.jpg') no-repeat center center;
             background-size: cover;
-            color: #fbc02d;
+            color: #d39906;
         }
 
         .autumn {
-            background-color: #e2c28e;
+            background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), 
+                        url('autumn.jpg') no-repeat center center;
             background-size: cover;
-            color: #c33408;
+            color: #ac2e08;
         }
 
     </style>
@@ -184,7 +192,7 @@
             "4-9": "Araw ng Kagitingan!🫡",
             "5-1": "Labor Day!👷🏻",
             "6-12": "Happy Independence Day!💁🏻‍♀️",
-            "8-28": "Happy National Heroes Day!👨🏻‍🎓", // Example for August
+            "8-28": "Happy National Heroes Day!🤵🏻‍♂️", // Example for August
             "10-31": "Happy Halloween!🎃",
             "11-1": "Happy All Saints' Day!😇",
             "11-2s": "Happy All Souls' Day!🕯️",
