--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             "10-31": "Happy Halloween!🎃",
             "11-1": "Happy All Saints' Day!😇",
             "11-2s": "Happy All Souls' Day!🕯️",
-            "11-30": "Bonifacio Day!🤵🏻‍♂️",
+            "11-30": "Bonifacio's Day!🤵🏻‍♂️",
             "12-24": "Christmas Eve! 🎅🏻",
             "12-25": "Merry Christmas!🎄",
             "12-30": "Rizal Day!👨🏻‍🏫",
